--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
     };
     firebase.initializeApp(config);
 </script>
-<script src="./data.js"></script>
+<script src="./tablefourm.js"></script>
 
 </html>
