--- a/rediseño/index.html
+++ b/rediseño/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+        crossorigin="anonymous">
+        <link rel="stylesheet" href="./style.css">
+    
     <title>Document</title>
 </head>
 
@@ -264,8 +267,41 @@
             </div>
         </div>
         <div id="Progración" class="hidden">
-            <div class="container-fluid slider d-flex justify-content-center align-items-center">
-                    <h1>Programación</h1>
+            <div class="container-fluid slider ol d-flex justify-content-center align-items-center">
+                <div class="row">
+                    <div class="col-md-12 ">
+                        <div class="row text-center">
+                            <div class="col-md-4">
+                                <i class="fas fa-square text-primary">
+                                    5% más del costo regular
+                                </i>
+                            </div>
+                            <div class="col-md-4">
+                                <i class="fas fa-square text-success">
+                                    15% más del costo regular
+                                </i>
+                            </div>
+                            <div class="col-md-4">
+                                <i class="fas fa-square text-warning">
+                                     Costo regular
+                                </i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12  pt-3">
+                        <div class="row border border-dark">
+                            <div class="col-md-4 text-left"><i class="fas fa-chevron-left display-5">Anterior Semana</i></div>
+                            <div class="col-md-4 text-center"><h6>19 AL 25 DE FEBRERO 2018</h6></div>
+                            <div class="col-md-4 text-right">Siguiente Semana<i class="fas fa-chevron-right display-5"></i></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="cuadro">
+                          <div id="contenedorPerfecto"></div>  
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
