--- a/rediseño/index.html
+++ b/rediseño/index.html
@@ -9,8 +9,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
-    
+    <link rel="stylesheet" href="./style.css">
+
     <title>Document</title>
 </head>
 
@@ -273,31 +273,31 @@
                         <div class="row text-center">
                             <div class="col-md-4">
                                 <i class="fas fa-square text-primary">
-                                    5% más del costo regular
-                                </i>
+                                </i> 5% más del costo regular
                             </div>
                             <div class="col-md-4">
                                 <i class="fas fa-square text-success">
-                                    15% más del costo regular
-                                </i>
+                                </i> 15% más del costo regular
                             </div>
                             <div class="col-md-4">
                                 <i class="fas fa-square text-warning">
-                                     Costo regular
-                                </i>
+                                </i> Costo regular
                             </div>
                         </div>
                     </div>
                     <div class="col-md-12  pt-3">
-                        <div class="row border border-dark">
-                            <div class="col-md-4 text-left"><i class="fas fa-chevron-left display-5">Anterior Semana</i></div>
-                            <div class="col-md-4 text-center"><h6>19 AL 25 DE FEBRERO 2018</h6></div>
-                            <div class="col-md-4 text-right">Siguiente Semana<i class="fas fa-chevron-right display-5"></i></div>
+                        <div class="row border border-secondary p-2">
+                            <div class="col-md-4 text-left"><i class="p-2 fas fa-chevron-left display-5"></i>Anterior
+                                Semana</div>
+                            <div class="col-md-4 text-center p-3">
+                                <h6>19 AL 25 DE FEBRERO 2018</h6>
+                            </div>
+                            <div class="col-md-4 text-right">Siguiente Semana<i class="p-2 fas fa-chevron-right display-5"></i></div>
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="cuadro">
-                          <div id="contenedorPerfecto"></div>  
+                        <div class="cuadro border border-secondary">
+                            <div id="contenedorPerfecto"></div>
                         </div>
                     </div>
 
